src/components/modal/styles/CdrModal.module.scss
@import '../../../styles/settings/index.scss';

$modal-animation-duration: 150ms;

.cdr-modal {
  @supports (-webkit-touch-callout: none) {
    & * {
      /* Safari iOS hack: force hardware acceleration on all elements inside modal
           otherwise content that is offscreen will flicker/disappear when scrolling
       Issue has to do with scrolling inside a position: fixed or relative container */
      will-change: transform;
    }
  }

  bottom: 0;
  height: 100%;
  left: 0;
  overflow-y: scroll;
  position: fixed;
  right: 0;
  top: 0;
  visibility: visible;
  z-index: 1000;

  &__overlay {
    background-color: $cdr-color-background-modal-overlay;
    backdrop-filter: blur($cdr-space-one-x);
    bottom: 0;
    left: 0;
    opacity: 1;
    position: fixed;
    right: 0;
    top: 0;
    transition: opacity $modal-animation-duration;
    z-index: 0;
  }

  &__outerWrap {
    display: flex;
    box-sizing: border-box;
    min-height: 100%;
    position: static;
    z-index: -1;
  }

  &__contentWrap {
    align-items: flex-start;
    background-color: $cdr-color-background-primary;
    display: flex;
    flex-direction: column;
    margin: auto;
    min-height: 100%;
    opacity: 1;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    transition: opacity $modal-animation-duration $modal-animation-duration;
    width: 100%;
    z-index: 0;
    &:focus {
      outline: 0;
    }
  }

  &__innerWrap {
    width: 100%;
    padding: $cdr-space-one-x;
  }

  &__dialog {
    width: 100%;
  }

  &__content {
    position: relative;
  }

  &__header {
    display: flex;
    padding-bottom: $cdr-space-one-x;
    justify-content: space-between;
  }
  &__title {
    flex: auto;
    @include cdr-text-heading-serif-600;
  }
  &__close-button {
    flex: none;
    align-self: center;
    margin-left: $cdr-space-half-x;
    padding: 7px;
    position: relative;
    top: -2px;
    right: -4px;
  }

  &__text-content {
    padding: 0;
    overflow: auto;
    position: relative;
  }

  @media (min-width: $cdr-breakpoint-sm) {
    &__outerWrap {
      padding: $cdr-space-one-x;
    }

    &__innerWrap {
      padding: $cdr-space-one-and-a-half-x;
    }

    &__contentWrap {
      border-radius: $cdr-radius-softer;
      box-shadow: $cdr-prominence-lifted;
      min-height: auto;
      position: relative;
      top: auto;
      left: auto;
      right: auto;
    }

    &__dialog {
      max-width: 640px;
    }

    &__close-button {
      margin-left: $cdr-space-three-quarter-x;
      right: -8px;
      top: -5px;
    }
  }
}

.cdr-modal--closed {
  transition: z-index 0s $modal-animation-duration * 2,
  visibility 0s $modal-animation-duration * 2;
  visibility: hidden;
  z-index: -1;

  .cdr-modal__overlay {
    opacity: 0;
    transition: opacity $modal-animation-duration $modal-animation-duration;
  }

  .cdr-modal__contentWrap {
    opacity: 0;
    transition: opacity $modal-animation-duration;
  }
}

:global(.cdr-modal__noscroll) {
  overflow: hidden !important;
  position: fixed !important;
  width: 100%;
}

